Funcionalidad de recuperacion de contraseña, FALTA todo lo de encriptacion

--- a/src/main/resources/templates/email/recuperacionContrasenia.html
+++ b/src/main/resources/templates/email/recuperacionContrasenia.html
@@ -8,9 +8,8 @@
     <div style="font-family: Arial, sans-serif; font-size: 14px; color: #333;">
         <p>Si deseas recuperar tu contraseña, debes ingresar al enlace que se encuentra a continuación.</p>
         
-        <p>
-            Enlace de recuperación: 
-            <a th:href="${urlrecuperacion}">Ir a Workee</a>
+        <p> 
+            <a th:href="${urlrecuperacion}">Enlace de recuperación</a>
         </p>
         <p>
             Si tienes alguna pregunta, no dudes en contactarnos.
