Agrego funcionalidad para rechazar una empresa

--- a/src/main/resources/templates/email/empresaHabilitada.html
+++ b/src/main/resources/templates/email/empresaHabilitada.html
@@ -2,14 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Recuperación de contraseña</title>
+    <title>¡Bienvenido a Workee!</title>
 </head>
 <body>
     <div style="font-family: Arial, sans-serif; font-size: 14px;">
-        <p>Si deseas recuperar tu contraseña, debes ingresar al enlace que se encuentra a continuación.</p>
-        
-        <p> 
-            <a th:href="${urlrecuperacion}">Enlace de recuperación</a>
+        <h2 style="color: #31A5DD;">¡Hola <span th:text="${nombreEmpresa}"></span>!</h2>
+        <p>¡Felicidades! Tu cuenta ya se encuentra habilitada.</p>
+       
+        <p>
+            Si deseas ingresar, haz click<a th:href="${urlApp}"> aquí </a> para ser redirigido a la página de inicio de sesión.
         </p>
         <p>
             Si tienes alguna pregunta, no dudes en contactarnos.
