--- a/src/main/resources/templates/email/empresaRechazada.html
+++ b/src/main/resources/templates/email/empresaRechazada.html
@@ -2,14 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Recuperación de contraseña</title>
+    <title>Cuenta rechazada</title>
 </head>
 <body>
     <div style="font-family: Arial, sans-serif; font-size: 14px;">
-        <p>Si deseas recuperar tu contraseña, debes ingresar al enlace que se encuentra a continuación.</p>
-        
-        <p> 
-            <a th:href="${urlrecuperacion}">Enlace de recuperación</a>
+        <h2 style="color: #31A5DD;">Hola <span th:text="${nombreEmpresa}"></span></h2>
+        <p>Lo sentimos, tu cuenta fue rechazada.</p>
+       
+        <p>
+            Lamentamos informarte que luego de una larga revisión, tu cuenta de empresa se encuentra rechazada.
         </p>
         <p>
             Si tienes alguna pregunta, no dudes en contactarnos.
