--- a/src/main/resources/templates/email/mailRevisionEmpresa.html
+++ b/src/main/resources/templates/email/mailRevisionEmpresa.html
@@ -5,7 +5,7 @@
     <title>Bienvenido a Workee</title>
 </head>
 <body>
-    <div style="font-family: Arial, sans-serif; font-size: 14px; color: #333;">
+    <div style="font-family: Arial, sans-serif; font-size: 14px; ">
         <h2 style="color: #31A5DD;">¡Hola <span th:text="${nombreEmpresa}"></span>!</h2>
         <p>Gracias por registrarte en Workee.</p>
         <p>
